# AiPanel

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.design-sync/: NOTES.md  config.json  conventions.md
.github/: pull_request_template.md
.playwright-mcp/: page-2026-06-18T00-46-41-163Z.yml  page-2026-06-18T19-30-57-162Z.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/agent/: agent_loop.rs  codex.rs  mod.rs
apps/desktop/src-tauri/src/audit/: mod.rs
apps/desktop/src-tauri/src/commands/: docker.rs  files.rs  mod.rs  search.rs  stream.rs  tasks.rs  terminal.rs
apps/desktop/src-tauri/src/core/: error.rs  mod.rs  sanitize.rs  types.rs
apps/desktop/src-tauri/src/credentials/: mod.rs
apps/desktop/src-tauri/src/docker/: mod.rs
apps/desktop/src-tauri/src/doctor/: mod.rs
apps/desktop/src-tauri/src/files/: mod.rs
apps/desktop/src-tauri/src/mcp/: mod.rs
apps/desktop/src-tauri/src/metrics/: mod.rs
apps/desktop/src-tauri/src/plan/: mod.rs
apps/desktop/src-tauri/src/risk/: mod.rs
apps/desktop/src-tauri/src/ssh/: mod.rs
apps/desktop/src-tauri/src/store/: mod.rs
apps/desktop/src-tauri/src/terminal/: mod.rs
apps/desktop/src-tauri/src/tools/: mod.rs
docs/: ARCHITECTURE.zh-Hans.md  CODEX.zh-Hans.md  README.zh-Hans.md  RELEASE.zh-Hans.md  ROADMAP.zh-Hans.md  SECURITY_MODEL.zh-Hans.md  TECH_STACK.zh-Hans.md
scripts/: bump-version.sh  ci-check.sh  fetch-codex.sh  release-check.sh  (+1 more)
(+64 files in other folders)
